Fixed spacing by adding margin

--- a/scss/_section_features.scss
+++ b/scss/_section_features.scss
@@ -6,5 +6,9 @@
 
 .features__image {
   max-width: 60px;
-  height: max-content;
+}
+
+.features__article {
+  margin-top: 60px;
+  margin-bottom: 60px;
 }
